@@ -5,6 +5,8 @@ dpkg (1.18.1) UNRELEASED; urgency=low
     This fixes build failures on armel, armhf, ppc64el and s390x.
   * Do not allow pathnames with embedded newlines in dpkg-deb and dpkg.
     Closes: #720761
+  * Perl modules:
+    - Add missing strict and warnings pragmas for submodules.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
